5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1679_1100.log
== TEST (2019-04-25 16:15:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	Y="Tartaruga"
elif(A==5):
	Y="Garca"
elif(A==10):
	Y="Arara"
elif(A==20):
	Y="Micro-leoa-dourado"
elif(A==50):
	Y="Onca-pintada"
elif(A==100):
	Y="Garoupa"
print("animal:",y)
else:
	print("animal:Invalido")

-- ERROR:
File "XXXX", line 20
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:15:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	Y="Tartaruga"
elif(A==5):
	Y="Garca"
elif(A==10):
	Y="Arara"
elif(A==20):
	Y="Micro-leoa-dourado"
elif(A==50):
	Y="Onca-pintada"
elif(A==100):
	Y="Garoupa"
   print("animal:",y)
else:
	print("animal:Invalido")

-- ERROR:
File "XXXX", line 19
    print("animal:",y)
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:17:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
	Y="Tartaruga"
elif(A==5):
	Y="Garca"
elif(A==10):
	Y="Arara"
elif(A==20):
	Y="Micro-leoa-dourado"
elif(A==50):
	Y="Onca-pintada"
elif(A==100):
	Y="Garoupa"
print("animal:",y)
else:
	print("animal:Invalido")

-- ERROR:
File "XXXX", line 9
    Y="Tartaruga"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:17:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
elif(A==5):
	Y="Garca"
elif(A==10):
	Y="Arara"
elif(A==20):
	Y="Micro-leoa-dourado"
elif(A==50):
	Y="Onca-pintada"
elif(A==100):
	Y="Garoupa"
print("animal:",y)
else:
	print("animal:Invalido")

-- ERROR:
File "XXXX", line 21
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:17:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
elif(A==5):
	Y="Garca"
elif(A==10):
	Y="Arara"
elif(A==20):
	Y="Micro-leoa-dourado"
elif(A==50):
	Y="Onca-pintada"
elif(A==100):
	Y="Garoupa"
print("animal:",y)
else:
	print("animal:Invalido")

-- ERROR:
File "XXXX", line 21
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:18:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
	Y="Garca"
	elif(A==10):
	Y="Arara"
	elif(A==20):
	Y="Micro-leoa-dourado"
	elif(A==50):
	Y="Onca-pintada"
	elif(A==100):
	Y="Garoupa"
	print("animal:",y)
else:
	print("animal:Invalido")

-- ERROR:
File "XXXX", line 11
    Y="Garca"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:18:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
	print("animal:",y)
else:
	print("animal:Invalido")

-- OUTPUT:
animal:Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:19:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
	print("animal:",y)
else:
	print("animal:Invalido")

-- EXECUTION TIME:
0.18657
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
animal:Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
animal:Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:20:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
	print("animal:",y)
else:
	print("animal:Invalido")

-- OUTPUT:
animal:Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:21:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
	print("animal:",y)


-- OUTPUT:
animal:Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:21:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
print("animal:",y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print("animal:",y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:24:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
print("animal:",y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print("animal:",y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:24:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
print("animal:",y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print("animal:",y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:26:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
	print("animal:",y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print("animal:",y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:26:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
print("animal:",Y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print("animal:",Y)
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:26:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
	print("animal:",Y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print("animal:",Y)
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:27:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
	print("animal:",Y)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 20, in <module>
    print("animal:",Y)
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:30:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
	print("animal:",Y)
else:
	print("Entrada:",A)
	print("Animal:Invalido")


-- OUTPUT:
Entrada: 100
Animal:Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:39:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
	print("Entrada:",A)
	print("animal:",Y)
	
	
else:
	print("Entrada:",A)
	print("Animal:Invalido")


-- OUTPUT:
Entrada: 100
Animal:Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:39:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Micro-leoa-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
	print("Entrada:",A)
	print("animal:",Y)
	
	
else:
	print("Entrada:",A)
	print("Animal:Invalido")


-- OUTPUT:
Entrada: 100
Animal:Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:40:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)and(A==5)and(A==10)and(A==20)and(A==50)and(A==100):
	if (A==2):
			Y="Tartaruga"
	elif(A==5):
			Y="Garca"
	elif(A==10):
			Y="Arara"
	elif(A==20):
			Y="Mico-leoa-dourado"
	elif(A==50):
			Y="Onca-pintada"
	elif(A==100):
			Y="Garoupa"
	print("Entrada:",A)
	print("animal:",Y)
else:
	print("Entrada:",A)
	print("Animal:Invalido")


-- OUTPUT:
Entrada: 100
Animal:Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:41:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
			Y="Tartaruga"
	elif(A==5):
			Y="Garca"
	elif(A==10):
			Y="Arara"
	elif(A==20):
			Y="Mico-leoa-dourado"
	elif(A==50):
			Y="Onca-pintada"
	elif(A==100):
			Y="Garoupa"
	print("Entrada:",A)
	print("animal:",Y)
else:
	print("Entrada:",A)
	print("Animal:Invalido")


-- OUTPUT:
Entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:41:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
			Y="Tartaruga"
	elif(A==5):
			Y="Garca"
	elif(A==10):
			Y="Arara"
	elif(A==20):
			Y="Mico-leoa-dourado"
	elif(A==50):
			Y="Onca-pintada"
	elif(A==100):
			Y="Garoupa"
	print("Entrada:",A)
	print("animal:",Y)
else:
	print("Entrada:",A)
	print("Animal:Invalido")


-- EXECUTION TIME:
0.19204
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:42:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
			Y="Tartaruga"
	elif(A==5):
			Y="Garca"
	elif(A==10):
			Y="Arara"
	elif(A==20):
			Y="Mico-leaa-dourado"
	elif(A==50):
			Y="Onca-pintada"
	elif(A==100):
			Y="Garoupa"
	print("Entrada:",A)
	print("animal:",Y)
else:
	print("Entrada:",A)
	print("Animal:Invalido")


-- EXECUTION TIME:
0.185069
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: Entrada: 50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:42:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
			Y="Tartaruga"
	elif(A==5):
			Y="Garca"
	elif(A==10):
			Y="Arara"
	elif(A==20):
			Y="Mico-leao-dourado"
	elif(A==50):
			Y="Onca-pintada"
	elif(A==100):
			Y="Garoupa"
	print("Entrada:",A)
	print("animal:",Y)
else:
	print("Entrada:",A)
	print("Animal:Invalido")


-- EXECUTION TIME:
0.243452
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:42:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
			Y="Tartaruga"
	elif(A==5):
			Y="Garca"
	elif(A==10):
			Y="Arara"
	elif(A==20):
			Y="Mico-leao-dourado"
	elif(A==50):
			Y="Onca-pintada"
	elif(A==100):
			Y="Garoupa"
	print("Entrada:",A)
	print("animal:",Y)
else:
	print("Entrada:",A)
	print("Animal:Invalido")


-- OUTPUT:
Entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:42:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
			Y="Tartaruga"
	elif(A==5):
			Y="Garca"
	elif(A==10):
			Y="Arara"
	elif(A==20):
			Y="Mico-leao-dourado"
	elif(A==50):
			Y="Onca-pintada"
	elif(A==100):
			Y="Garoupa"
	print("Entrada:",A)
	print("animal:",Y)
else:
	print("Entrada:",A)
	print("Animal:Invalido")


-- OUTPUT:
Entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:42:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
			Y="Tartaruga"
	elif(A==5):
			Y="Garca"
	elif(A==10):
			Y="Arara"
	elif(A==20):
			Y="Mico-leao-dourado"
	elif(A==50):
			Y="Onca-pintada"
	elif(A==100):
			Y="Garoupa"
	print("Entrada:",A)
	print("animal:",Y)
else:
	print("Entrada:",A)
	print("Animal:Invalido")


-- OUTPUT:
Entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:42:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
			Y="Tartaruga"
	elif(A==5):
			Y="Garca"
	elif(A==10):
			Y="Arara"
	elif(A==20):
			Y="Mico-leao-dourado"
	elif(A==50):
			Y="Onca-pintada"
	elif(A==100):
			Y="Garoupa"
	print("Entrada:", A)
	print("animal:", Y)
else:
	print("Entrada:", A)
	print("Animal:Invalido")


-- OUTPUT:
Entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:43:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
			Y="Tartaruga"
	elif(A==5):
			Y="Garca"
	elif(A==10):
			Y="Arara"
	elif(A==20):
			Y="Mico-leao-dourado"
	elif(A==50):
			Y="Onca-pintada"
	elif(A==100):
			Y="Garoupa"
	print("Entrada:", A)
	print("animal:", Y)
else:
	print("Entrada:", A)
	print("Animal:Invalido")


-- OUTPUT:
Entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:43:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
			Y="Tartaruga"
	elif(A==5):
			Y="Garca"
	elif(A==10):
			Y="Arara"
	elif(A==20):
			Y="Mico-leao-dourado"
	elif(A==50):
			Y="Onca-pintada"
	elif(A==100):
			Y="Garoupa"
	print("Entrada:", A)
	print("animal:", Y)
else:
	print("Entrada:", A)
	print("Animal:Invalido")


-- OUTPUT:
Entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:43:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
			Y="Tartaruga"
	elif(A==5):
			Y="Garca"
	elif(A==10):
			Y="Arara"
	elif(A==20):
			Y="Mico-leao-dourado"
	elif(A==50):
			Y="Onca-pintada"
	elif(A==100):
			Y="Garoupa"
	print("Entrada:", A)
	print("animal:", Y)
else:
	print("Entrada:", A)
	print("Animal:Invalido")


-- EXECUTION TIME:
0.193358
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:43:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Mico-leao-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
	print("Entrada:", A)
	print("animal:", Y)
else:
	print("Entrada:", A)
	print("Animal:Invalido")


-- OUTPUT:
Entrada: 100
animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:43:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Mico-leao-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
	print("Entrada:", A)
	print("animal:", Y)
else:
	print("Entrada:", A)
	print("Animal:Invalido")


-- EXECUTION TIME:
0.137053
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal:Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 16:44:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

A=int(input("Entrada: "))

if (A==2)or(A==5)or(A==10)or(A==20)or(A==50)or(A==100):
	if (A==2):
		Y="Tartaruga"
	elif(A==5):
		Y="Garca"
	elif(A==10):
		Y="Arara"
	elif(A==20):
		Y="Mico-leao-dourado"
	elif(A==50):
		Y="Onca-pintada"
	elif(A==100):
		Y="Garoupa"
	print("Entrada:", A)
	print("Animal:", Y)
else:
	print("Entrada:", A)
	print("Animal: Invalido")


-- EXECUTION TIME:
0.11618
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
